Fix background for StandalonePlayer & DetailVideoPlayer on safari mobile

--- a/Pages/Detail/DetailVideo/DetailVideoPlayer/DetailVideoPlayer.razor.css
+++ b/Pages/Detail/DetailVideo/DetailVideoPlayer/DetailVideoPlayer.razor.css
@@ -276,6 +276,7 @@ p {
         display: flex;
         flex-direction: column;
         background-position: center;
+        background-repeat: no-repeat;
         height: 100%;
         padding-top: 8px;
         padding-inline: 16px;
